examples/test/testpolicy3348.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3348
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key48: value41
      key44: value47
      key12: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value48
          key34: value33
      podSelector:
        matchLabels:
          key26: value2
